--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,8 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
-      <a href="projects.html">Portfolio</a>
+      <a href="projects.html">Projects</a>
+      <a href="portfolio.html">Portfolio</a>
     </nav>
   </header>
 
