--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
-      <a href="projects.html">Portfolio</a>
+      <a href="projects.html">Projects</a>
+      <a href="portfolio.html">Portfolio</a>
     </nav>
   </header>
 
@@ -25,7 +26,7 @@
     <div class="buttons">
       <a href="resume.html" class="btn resume">Resume</a>
       <a href="projects.html" class="btn projects">Projects</a>
-      <a href="contact.html" class="btn contact">Contact</a>
+      <a href="portfolio.html" class="btn contact">Portfolio</a>
     </div>
 
     <section class="intro">
