--- a/project4.html
+++ b/project4.html
@@ -2,23 +2,156 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Object Detection – RF-DETR</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hogwarts Adventure | Portfolio</title>
   <style>
+    /* Reset and base */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background-color: white;
+      color: #111;
+    }
+
+    /* Header */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 25px 40px;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+    }
+
+    .logo .dot {
+      width: 10px;
+      height: 10px;
+      background-color: orange;
+      border-radius: 50%;
+      margin-right: 8px;
+    }
+
+    .logo .role {
+      font-weight: normal;
+      color: #888;
+      margin-left: 6px;
+      font-size: 0.9rem;
+    }
+
+    nav a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: #000;
+      font-size: 0.9rem;
+    }
+
+    /* Project Layout */
+    .project-layout {
+      display: flex;
+      justify-content: space-between;
+      gap: 60px;
+      margin: 60px 40px 30px;
+      flex-wrap: wrap;
+    }
+
+    .left-info {
+      flex: 1;
+      min-width: 280px;
+      max-width: 300px;
+    }
+
+    .left-info h1 {
+      font-size: 2.4rem;
+      margin-bottom: 20px;
+    }
+
+    .left-info p {
+      font-size: 0.95rem;
+      line-height: 1.5;
+      margin-bottom: 10px;
+    }
+
+    .right-description {
+      flex: 2;
+      min-width: 300px;
+      max-width: 600px;
+      font-size: 0.95rem;
+      line-height: 1.7;
+    }
+
+    .project-images {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      margin: 40px;
+    }
+
     .project-images video {
       width: 100%;
       border-radius: 6px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Navigation Links */
+    .navigation-links {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 60px 40px;
+      font-size: 0.9rem;
+    }
+
+    .navigation-links a {
+      text-decoration: none;
+      color: #4a148c;
+      font-weight: bold;
+      padding: 10px 15px;
+      transition: color 0.3s ease;
+    }
+
+    .navigation-links a:hover {
+      color: #000;
+    }
+
+    /* Footer */
+    footer {
+      display: flex;
+      justify-content: space-around;
+      padding: 30px 20px;
+      font-size: 0.8rem;
+      border-top: 1px solid #ccc;
+      flex-wrap: wrap;
+    }
+
+    .footer-section {
+      margin: 10px;
+      text-align: center;
+      flex: 1 1 200px;
+    }
+
+    .footer-section a {
+      text-decoration: none;
+      color: #000;
     }
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
 
+  <!-- Header -->
   <header>
     <div class="logo">
-      <span class="dot"></span>
-      <strong>Ghada Alqahtani</strong> <span class="role">AI Graduate</span>
+      <div class="dot"></div>
+      Ghada Alqahtani <span class="role">AI Graduate</span>
     </div>
     <nav>
       <a href="index.html">Home</a>
@@ -28,39 +161,42 @@
     </nav>
   </header>
 
-  <main>
+  <!-- Main Project Info -->
   <div class="project-layout">
     <div class="left-info">
-      <h1>Object Detection –<br>RF-DETR</h1>
-      <p><strong>Project Type</strong><br>Object Detection Project</p>
+      <h1>Hogwarts Adventure</h1>
+
+      <p><strong>Project Type</strong><br>
+        Front-End Web Developer / React Nanodegree (Scholarship Project)</p>
+
       <p><strong>Date</strong><br>2025</p>
-      <p><strong>Role</strong><br>Developer</p>
+
+      <p><strong>🚀 Built With</strong><br>
+        React, TypeScript, HTML, CSS, Custom Audio Effects</p>
     </div>
+
     <div class="right-description">
       <p>
-        RF-DETR is a real-time, transformer-based object detection model architecture developed by Roboflow and released under the Apache 2.0 license.
+        Hogwarts Adventure is a text based interactive game built with React and TypeScript, designed to showcase storytelling, state driven UI, dynamic logic, and user interactivity. Players explore a mysterious world inspired by the magical universe of Harry Potter, making choices that affect the storyline, discovering legendary items, and confronting iconic villains.
       </p>
     </div>
   </div>
 
+  <!-- Project Video -->
   <div class="project-images">
     <video controls>
-      <source src="images/video1.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-
-    <video controls>
-      <source src="images/video2.mp4" type="video/mp4" />
+      <source src="images/Game Demo.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
 
+  <!-- Navigation -->
   <div class="navigation-links">
-    <a href="project2.html">&larr; Previous Project</a>
-    <a href="project4.html">Next Project &rarr;</a>
+    <a href="project3.html">← Previous Project</a>
+    <a href="project5.html">Next Project →</a>
   </div>
-</main>
 
+  <!-- Footer -->
   <footer>
     <div class="footer-section">
       <p><strong>Email</strong><br>ghadaazizqh@gmail.com</p>
