--- a/project5.html
+++ b/project5.html
@@ -156,6 +156,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
+      <a href="projects.html">Projects</a>
       <a href="portfolio.html">Portfolio</a>
     </nav>
   </header>
