--- a/resume.html
+++ b/resume.html
@@ -27,53 +27,132 @@
   <main class="resume-vertical">
     <h1 class="resume-title">Resume</h1>
 
+    <!-- Summary -->
+    <section class="resume-block">
+      <h2>Summary</h2>
+      <p>
+        As an aspiring AI professional, I am pursuing a Bachelor's in Artificial Intelligence at Princess Nourah University.
+        I’ve gained hands-on experience in machine learning, data analysis, and intelligent system design.
+        My skills are strengthened by certifications from KAUST, Coursera, Microsoft, and SDAIA.
+        I’m passionate about applying AI to solve real-world problems across various industries.
+      </p>
+    </section>
+
+    <!-- Experience -->
+    <section class="resume-block">
+      <h2>Experience</h2>
+      <p>
+        Despite my limited prior experience, I possess a strong desire to contribute positively in the workplace,
+        leaving a meaningful impact and attaining notable achievements. I am adept at swiftly adapting to diverse
+        work environments and accomplishing new goals.
+      </p>
+    </section>
+
     <!-- Education -->
     <section class="resume-block">
       <h2>Education</h2>
       <div class="resume-row">
         <div class="resume-left">
           <strong>Princess Nourah Bint Abdulrahman University</strong><br />
-          <small>Bachelor’s in Artificial Intelligence</small>
+          <small>Bachelor’s Degree in Artificial Intelligence</small>
         </div>
-        <div class="resume-right">2021 – 2025</div>
+        <div class="resume-right">Expected January 2026</div>
       </div>
+      <ul>
+        <li>Gained solid knowledge of machine learning, neural networks, and computer vision.</li>
+        <li>Learned to build intelligent systems for decision-making and automation.</li>
+        <li>Developed skills in Python, TensorFlow, and SQL for data handling.</li>
+        <li>Applied AI in real-world sectors like healthcare and finance.</li>
+        <li>Strengthened critical thinking and ethical AI practices.</li>
+      </ul>
     </section>
 
     <hr />
 
     <!-- Certificates -->
     <section class="resume-block">
-      <h2>Certificates</h2>
-      <div class="resume-row">
-        <div class="resume-left">
-          <strong>Advanced Artificial Intelligence Training Program</strong><br />
-          <small>KAUST in partnership with NTDP</small>
-        </div>
-        <div class="resume-right">2024 – 2025</div>
-      </div>
-      <div class="resume-row">
-        <div class="resume-left">
-          <strong>ML Practitioner</strong><br />
-          <small>SDAIA</small>
-        </div>
-        <div class="resume-right">2023</div>
-      </div>
+      <h2>Certifications and Courses</h2>
+      <ul>
+        <li>Advanced Artificial Intelligence Training Program | KAUST Academy | February 2025</li>
+        <li>Fundamentals of Image Processing | Tuwaiq Academy | February 2025</li>
+        <li>Introductory Artificial Intelligence Training Program | KAUST Academy | January 2025</li>
+        <li>ML Practitioner | SDAIA | October–November 2023</li>
+        <li>Calculus for Machine Learning and Data Science | Coursera</li>
+        <li>Cloud Computing Admin (Virtual Experience) | Microsoft</li>
+        <li>Cybersecurity Incident Response Analysis (Virtual Experience) | STC</li>
+        <li>Data Analysis (Virtual Experience) | STC</li>
+        <li>Data Collection and Processing with Python | Coursera</li>
+        <li>Exploratory Data Analysis for Machine Learning | IBM</li>
+        <li>Improving Deep Neural Networks | Coursera</li>
+        <li>Mathematics for Machine Learning and Data Science Specialization | Coursera</li>
+        <li>Operational Risks Analyst (Virtual Experience) | SIDF</li>
+        <li>Python Basics | Coursera</li>
+        <li>Python Classes and Inheritance | Coursera</li>
+        <li>Python Functions, Files, and Dictionaries | Coursera</li>
+        <li>Senior Associate (Virtual Experience) | Boston Consulting Group (BCG)</li>
+        <li>Software Developer – Artificial Intelligence (Virtual Experience) | Microsoft</li>
+        <li>Supervised Machine Learning: Regression | IBM</li>
+      </ul>
+    </section>
+
+    <hr />
+
+    <!-- Projects -->
+    <section class="resume-block">
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <strong>Graduation Project | Smart Predictive Maintenance System Using Unsupervised Machine Learning</strong>
+          <ul>
+            <li>Built a system to predict equipment failures using unsupervised machine learning.</li>
+            <li>Analyzed maintenance data to identify hidden failure patterns.</li>
+            <li>Used KMeans and GMM to detect early signs of abnormal behavior.</li>
+          </ul>
+        </li>
+      </ul>
     </section>
 
     <hr />
 
     <!-- Skills -->
     <section class="resume-block">
-      <h2>Skills & Expertise</h2>
-      <ul class="skills-list">
-        <li>Python</li>
-        <li>Machine Learning</li>
-        <li>Deep Learning</li>
-        <li>Natural Language Processing</li>
-        <li>Data Analysis & Visualization</li>
-        <li>SQL</li>
-        <li>Problem Solving</li>
-        <li>Power BI</li>
+      <h2>Skills</h2>
+      <div class="resume-columns">
+        <div>
+          <strong>Technical Skills:</strong>
+          <ul>
+            <li>Artificial Intelligence</li>
+            <li>Deep Learning</li>
+            <li>Computer Vision</li>
+            <li>Data Science</li>
+            <li>Data Mining</li>
+            <li>AI Project Management</li>
+            <li>Robotics</li>
+            <li>Microsoft Office Skills</li>
+          </ul>
+        </div>
+        <div>
+          <strong>Soft Skills:</strong>
+          <ul>
+            <li>Communication Skills</li>
+            <li>Creative Problem-Solving</li>
+            <li>Adaptability and Flexibility</li>
+            <li>Teamwork</li>
+            <li>Creativity and Innovation</li>
+            <li>Time Management</li>
+            <li>Attention to Detail</li>
+            <li>Strategic Planning</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Languages -->
+    <section class="resume-block">
+      <h2>Languages</h2>
+      <ul>
+        <li>Arabic</li>
+        <li>English</li>
       </ul>
     </section>
   </main>
