--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <div class="footer-section">
       <p><strong>LinkedIn</strong><br>
-        <a href="www.linkedin.com/in/ghada-abddulaziz-alqahtani" target="_blank">
+        <a href="http://www.linkedin.com/in/ghada-abddulaziz-alqahtani" target="_blank">
           <i class="fab fa-linkedin fa-xl"></i>
         </a>
       </p>
